kubernetes/platform/traefik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    aetheriscloud.fr/tier: platform
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
